--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Games</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="askusername">
@@ -82,7 +82,7 @@
             <h1 class="overtext">Umumiy Over: </h1>
             <button onclick="restartFootball()" class="reset-btn">Qayta boshlash</button>
         </div>
-        </div>
+    </div>
 
     <script>
         let tg = window.Telegram.WebApp;
@@ -375,4 +375,5 @@
 
     </script>
 </body>
+
 </html>
